Config 수정